# polars_plugin_mem_profiling

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
mem_profiling/: __init__.py  utils.py
prof/: .gitignore  00_call_it_allocates_apply_values.py  01_call_it_allocates_apply_to_buffer.py  02_call_it_allocates_builder.py  03_call_it_slices_apply_values.py  04_call_it_slices_apply_to_buffer.py  05_call_it_slices_builder.py  README.md  start_prof.sh  tests
prof/input/: README.md  gen_csv.py
src/: expressions.rs  lib.rs
